--- a/assets/css/3-sections/_thumbnails.sass
+++ b/assets/css/3-sections/_thumbnails.sass
@@ -4,11 +4,11 @@
   padding: 30px
   +clearfix
   .thumb-unit
-    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23)
+    // box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23)
     cursor: pointer
     display: block
-    width: 600px
-    height: 300px
+    width: 688px
+    height: 400px
     margin: 0px auto 30px
     position: relative
     overflow: hidden
