--- a/assets/css/3-sections/_default.sass
+++ b/assets/css/3-sections/_default.sass
@@ -1,6 +1,6 @@
 body
   background: white
-  font-family: 'Roboto', sans-serif
+  font-family: 'Verdana', sans-serif
   font-size: 16px
 .site-container
   width: 750px
