--- a/assets/css/3-sections/_default.sass
+++ b/assets/css/3-sections/_default.sass
@@ -2,6 +2,7 @@ body
   background: white
   font-family: 'Verdana', sans-serif
   font-size: 16px
+  color: #333
 .site-container
   width: 750px
   margin: auto
